# dsde_final_project

./: .gitignore  README.md  count_stations.py  demo_jigsaw.py  pyproject.toml  run_audit.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
ect-scraped/: script.ipynb
election_pipeline/: Dockerfile  auth_setup.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  validate_manual_corrections.ipynb
election_pipeline/dags/: election_dag.py  structural_audit_dag.py
election_pipeline/readme/: pipeline_overview_part1.md  pipeline_overview_part2.md
election_pipeline/src/: config.py  exporter.py  gdrive_client.py  ocr_parser.py  processor.py
election_pipeline/validation/: _expected_structure.py  engine.py  form_identifier.py  formatters.py  linguistic_validator.py  structural_auditor.py  verify_manual_ocr.py
election_pipeline/validation/notebooks/: manual_review_queue.ipynb  streamlit_manual_review.py
election_pipeline/validation/notebooks/(not use)/: manual_review_queue.ipynb
election_pipeline/validation/tests/: formatters.py  test_jigsaw.py  test_structural.py
facebook-scrape/: facebook_scrape.ipynb
insights/: README.md
mock/: test.py
scraping/: metadata.csv
scratch/: test_nan.py
thai-trocr/: pipeline.ipynb
typhoon/: log.ipynb
validation/: engine.py  linguistic_validator.py  test_linguistic_validator.py
visualization_prep_insight3/: aggregate_bhumjaithai_all.py
visualize/: README.md  app.py  data_loader.py  fetch_tambon_coords.py  requirements.txt
vote62-scraped/: script.ipynb
wikipedia-scraped/: pyproject.toml  (+1 more)
(+57 files in other folders)
