[project]
name = "dsde-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]

[tool.uv.workspace]
members = ["wikipedia-scraped"]
